--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.0",
         "jquery": "^3.6.1",
+        "jquery-ui": "^1.13.2",
         "lodash.clonedeep": "^4.5.0",
         "mini-css-extract-plugin": "^2.5.2",
         "normalize.css": "^8.0.1",
